--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,20 +13,23 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.1, 8.0]
-        laravel: [9.*, 8.*]
+        php: [8.2, 8.1, 8.0]
+        laravel: [10.*, 9.*, 8.*]
         stability: [prefer-stable]
         include:
+          - laravel: 10.*
+            testbench: 8.*
+            carbon: ^2.66
           - laravel: 9.*
             testbench: 7.*
             carbon: ^2.66
-
           - laravel: 8.*
             testbench: 6.*
             carbon: ^2.63
-
+        exclude:
+          - laravel: 10.*
+            php: 8.0
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
