--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,9 +2,9 @@ name: run-tests
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
   test:
@@ -12,17 +12,24 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        php: [8.2, 8.1]
-        laravel: [10.*]
-        stability: [prefer-lowest, prefer-stable]
+        os: [ubuntu-latest]
+        php: [8.2, 8.1, 8.0]
+        laravel: [10.*, 9.*, 8.*]
+        stability: [prefer-stable]
         include:
           - laravel: 10.*
             testbench: 8.*
+            carbon: ^2.66
+          - laravel: 9.*
+            testbench: 7.*
+            carbon: ^2.66
+          - laravel: 8.*
+            testbench: 6.*
             carbon: ^2.63
-
+        exclude:
+          - laravel: 10.*
+            php: 8.0
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -48,4 +55,4 @@ jobs:
         run: composer show -D
 
       - name: Execute tests
-        run: vendor/bin/pest
+        run: vendor/bin/phpunit
