--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,10 +13,13 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.2, 8.1, 8.0]
-        laravel: [10.*, 9.*, 8.*]
+        php: [8.3, 8.2, 8.1, 8.0]
+        laravel: [11.*, 10.*, 9.*, 8.*]
         stability: [prefer-stable]
         include:
+          - laravel: 11.*
+            testbench: 9.*
+            carbon: ^2.66
           - laravel: 10.*
             testbench: 8.*
             carbon: ^2.66
@@ -27,6 +30,8 @@ jobs:
             testbench: 6.*
             carbon: ^2.63
         exclude:
+          - laravel: 11.*
+            php: 8.1
           - laravel: 10.*
             php: 8.0
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
