--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,7 +31,9 @@ jobs:
             carbon: ^2.63
         exclude:
           - laravel: 11.*
-            php: [8.0, 8.1]
+            php: 8.1
+          - laravel: 11.*
+            php: 8.0
           - laravel: 10.*
             php: 8.0
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
