--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,10 @@
     ]
   },
   "require-dev": {
-    "phpunit/phpunit": "9.*|10.*|11.*",
+    "phpunit/phpunit": "9.*|10.*",
     "mockery/mockery": "^1.4.0",
     "php-coveralls/php-coveralls": "^2.1",
-    "laravel/laravel": "8.*|9.*|10.*|11.*",
+    "laravel/laravel": "8.*|9.*|10.*",
     "phpstan/phpstan": "^1.10"
   },
   "extra": {
