--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: [8.3, 8.2, 8.1, 8.0]
-        laravel: [11.*, 10.*, 9.*, 8.*]
+        laravel: [10.*, 9.*, 8.*]
         stability: [prefer-stable]
         include:
           - laravel: 10.*
