--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     ]
   },
   "require-dev": {
-    "phpunit/phpunit": "9.*|10.*",
+    "phpunit/phpunit": "9.*",
     "mockery/mockery": "^1.4.0",
     "php-coveralls/php-coveralls": "^2.1",
     "laravel/laravel": "8.*|9.*|10.*",
