--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     }
   ],
   "require": {
-    "php" : "^8.0|^8.1|^8.2|^8.3",
-    "mashape/unirest-php": "^3.0",
+    "php" : "^8.2|^8.3",
+    "mashape/unirest-php": "^3.0.4",
     "carbon-cli/carbon-cli": "^1.2"
   },
   "autoload": {
@@ -29,18 +29,15 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Pixelpeter\\Genderize\\Test\\": "tests"
-    },
-    "classmap": [
-      "tests/TestCase.php"
-    ]
+      "Pixelpeter\\Genderize\\Tests\\": "tests"
+    }
   },
   "require-dev": {
-    "phpunit/phpunit": "9.*",
-    "mockery/mockery": "^1.4.0",
-    "php-coveralls/php-coveralls": "^2.1",
-    "laravel/laravel": "8.*|9.*|10.*",
-    "phpstan/phpstan": "^1.10"
+    "phpunit/phpunit": "^10.5",
+    "mockery/mockery": "^1.6.12",
+    "php-coveralls/php-coveralls": "^2.7",
+    "laravel/laravel": "^10.0|^11.0",
+    "phpstan/phpstan": "^1.12.6"
   },
   "extra": {
     "laravel": {
