--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,6 +23,9 @@ jobs:
           - laravel: 10.*
             testbench: 8.*
             carbon: ^2.66
+        exclude:
+          - laravel: 11.*
+            php: 8.1
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
     steps:
       - name: Checkout code
