--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.5",
+    "phpunit/phpunit": "^10.5|^11.0",
     "mockery/mockery": "^1.6.12",
     "php-coveralls/php-coveralls": "^2.7",
     "laravel/laravel": "^10.0|^11.0",
