--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     }
   ],
   "require": {
-    "php" : "^8.1|^8.2|^8.3",
+    "php": "^8.1|^8.2|^8.3",
     "mashape/unirest-php": "^3.0.4",
     "carbon-cli/carbon-cli": "^1.2"
   },
@@ -37,7 +37,14 @@
     "mockery/mockery": "^1.6.12",
     "php-coveralls/php-coveralls": "^2.7",
     "laravel/laravel": "^10.0|^11.0",
-    "phpstan/phpstan": "^1.12.6"
+    "phpstan/phpstan": "^1.12.6",
+    "phpstan/extension-installer": "^1.3"
+  },
+  "config": {
+    "allow-plugins": {
+      "phpstan/extension-installer": true
+    },
+    "sort-packages": true
   },
   "extra": {
     "laravel": {
