--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,13 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.5|^11.0",
+    "larastan/larastan": "^2.9",
+    "laravel/laravel": "^10.0|^11.0",
     "mockery/mockery": "^1.6.12",
     "php-coveralls/php-coveralls": "^2.7",
-    "laravel/laravel": "^10.0|^11.0",
+    "phpstan/extension-installer": "^1.3",
     "phpstan/phpstan": "^1.12.6",
-    "phpstan/extension-installer": "^1.3"
+    "phpunit/phpunit": "^10.5|^11.0"
   },
   "config": {
     "allow-plugins": {
