--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
-/vendor
+# Composer Related
 composer.lock
-.DS_Store
-.phpunit.result.cache
+/vendor
+
+# Frontend Assets
+/node_modules
+
+# Logs
+npm-debug.log
+yarn-error.log
+
+# Caches
 .phpunit.cache
-.idea
+.phpunit.result.cache
+/build
+
+# IDE Helper
+_ide_helper.php
+_ide_helper_models.php
+.phpstorm.meta.php
+
+# Editors
+/.idea
+/.fleet
+/.vscode
+
+# Misc
+phpunit.xml
+phpstan.neon
+testbench.yaml
+/docs
+/coverage
