--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -58,4 +58,4 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          php-coveralls --coverage_clover=build/logs/clover.xml -v        
+          vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v        
