--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "require": {
     "php": "^8.1|^8.2|^8.3",
     "mashape/unirest-php": "^3.0.4",
-    "carbon-cli/carbon-cli": "^1.2"
+    "carbon-cli/carbon-cli": "^1.2",
+    "laravel/laravel": "^10.0|^11.0"
   },
   "autoload": {
     "psr-4": {
@@ -33,7 +34,6 @@
     }
   },
   "require-dev": {
-    "laravel/laravel": "^10.0|^11.0",
     "mockery/mockery": "^1.6.12",
     "php-coveralls/php-coveralls": "^2.7",
     "phpstan/extension-installer": "^1.3",
