--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     }
   ],
   "require": {
-    "php": "^8.1|^8.2|^8.3",
+    "php": "^8.0|^8.1|^8.2",
     "mashape/unirest-php": "^3.0.4",
     "carbon-cli/carbon-cli": "^1.2",
-    "laravel/laravel": "^10.0|^11.0"
+    "laravel/laravel": "^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
@@ -38,7 +38,7 @@
     "php-coveralls/php-coveralls": "^2.7",
     "phpstan/extension-installer": "^1.3",
     "phpstan/phpstan": "^1.12.6",
-    "phpunit/phpunit": "^10.5|^11.0"
+    "phpunit/phpunit": "^9.5"
   },
   "config": {
     "allow-plugins": {
