--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "php": "^8.0|^8.1|^8.2",
     "mashape/unirest-php": "^3.0.4",
     "carbon-cli/carbon-cli": "^1.2",
-    "laravel/laravel": "^8.0|^9.0"
+    "laravel/framework": "^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
@@ -35,6 +35,7 @@
   },
   "require-dev": {
     "mockery/mockery": "^1.6.12",
+    "orchestra/testbench": "^6.0|^7.0",
     "php-coveralls/php-coveralls": "^2.7",
     "phpstan/extension-installer": "^1.3",
     "phpstan/phpstan": "^1.12.6",
