--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require": {
     "php": "^8.1|^8.2|^8.3",
     "mashape/unirest-php": "^3.0.4",
-    "laravel/framework": "^10.0|^11.0"
+    "laravel/framework": "^10.0|^11.0|^12.0"
   },
   "autoload": {
     "psr-4": {
