--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,10 +13,13 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.3, 8.2, 8.1]
-        laravel: [11.*, 10.*]
+        php: [8.4, 8.3, 8.2, 8.1]
+        laravel: [12.*, 11.*, 10.*]
         stability: [prefer-stable]
         include:
+          - laravel: 12.*
+            testbench: 10.*
+            carbon: ^2.66-
           - laravel: 11.*
             testbench: 9.*
             carbon: ^2.66
@@ -25,6 +28,8 @@ jobs:
             carbon: ^2.66
         exclude:
           - laravel: 11.*
+            php: 8.1
+          - laravel: 12.*
             php: 8.1
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
     steps:
